    ADDED: searcher is able to search content on remote URLs
    ADDED: panel splitter shows the percent values at moving
    ADDED: Copy/Move: preserve all attributes (time, owner, group)
    ADDED: viewer, print + copy actions
    ADDED: new krarc (password handling, type autodetection, writing
           out archiver error messages, step into hidden archives,...)

    FIXED: single click doesn't work in TC selection mode
    FIXED: disk usage crash at deleting files
    FIXED: valgrind: Free Memory Read          - SynchronizerGUI::loadFromProfile()
    FIXED: valgrind: Free Memory Read          - RadialMap::Widget::paintExplodedLabels()
    FIXED: valgrind: Free Memory Read          - DULines::slotChanged()
    FIXED: valgrind: Free Memory Read          - DULines::slotDeleted()
    FIXED: valgrind: Free Memory Read          - KrDetailedView::contentsMousePressEvent()
    FIXED: valgrind: Mismatched delete/delete[]- RadialMap::Builder::Builder()
    FIXED: valgrind: Uninitialized Memory Read - DUFileLight::slotAboutToShow()
    FIXED: valgrind: Free Memory Read          - KViewer::tabCloseRequest()
    FIXED: valgrind: Uninitialized Memory Read - KViewer::tabChanged()
    FIXED: valgrind: Free Memory Read          - PanelManager::slotCloseTab()
    FIXED: [ 1435352 ] crash after NewPanel->Ctrl+U->DeletePanel
    FIXED: HTML tags cause problem to the searcher
    FIXED: [ 1415250 ] searching large directories, doesn't process UI events
    FIXED: search by content goes into infinite loop if the file cannot be opened
    FIXED: after exiting the pending jobs stall
    FIXED: [ 1193239 ] crash at 'Closing Current Session'
    FIXED: synchronizer is always on the top of the panels
    FIXED: [Debian: 352367] useractions with terminal output ignores configured terminal
    FIXED: last tabs are not saved, if an old config value is present
    FIXED: panel popup gets focus at opening, gives focus to panel at hiding